--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,10 @@ spring.jpa.properties.hibernate.hbm2ddl.auto=update
 
 # ·½ÑÔ
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+
+web.upload-path=D:/temp/upload/test/
+#web.upload-path=/file-upload/
+
+spring.mvc.static-path-pattern=/**
+spring.resources.static-locations=classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,file:${web.upload-path}
