--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
         </dependency>
 
         <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
@@ -50,7 +55,6 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.17</version>
         </dependency>
-
     </dependencies>
 
 </project>
