--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ hibernate.show_sql=true
 ## 自动建表方式
 #hibernate.hbm2ddl.auto= update
 ## 自动扫描的包前缀
-entitymanager.packagesToScan= com.zslin
+entitymanager.packagesToScan= com.wudang
 
 ## 数据库连接
 spring.datasource.url=jdbc:mysql://localhost:3306/test_article?useUnicode=true&characterEncoding=utf-8&useSSL=true&autoReconnect=true
@@ -18,7 +18,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/test_article?useUnicode=true&c
 spring.datasource.username=root
 
 ## 密码
-spring.datasource.password=123
+spring.datasource.password=123456
 
 ## 数据库驱动
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
